--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
     <color name="colorGreen60">#9964DD17</color>
     <color name="colorGreen30">#4D64DD17</color>
     <color name="colorBlue87">#DE2C98F0</color>
+    <color name="colorBrightRed">#BB0000</color>
+    <color name="colorRed">#870000</color>
     <color name="colorRed87">#DE870000</color>
     <color name="colorRed60">#99870000</color>
     <color name="colorRed30">#4D870000</color>
