--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -17,6 +17,11 @@
         android:title="@string/profile" />
 
     <item
+        android:id="@+id/navigation_gallery"
+        android:icon="@drawable/ic_apps_black_24dp"
+        android:title="@string/title_gallery" />
+
+    <item
         android:id="@+id/navigation_settings"
         android:icon="@drawable/ic_settings_black_24dp"
         android:title="@string/title_settings" />
