--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,6 +24,12 @@
         tools:layout="@layout/fragment_profile" />
 
     <fragment
+        android:id="@+id/navigation_gallery"
+        android:name="com.djaphar.babysitterparent.Fragments.GalleryFragment"
+        android:label="@string/title_gallery"
+        tools:layout="@layout/fragment_gallery" />
+
+    <fragment
         android:id="@+id/navigation_settings"
         android:name="com.djaphar.babysitterparent.Fragments.SettingsFragment"
         android:label="@string/title_settings"
